2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_snmp.php: Improved the security
	on the function "snmp_generate_trap" by escaping the
	command arguments.
	
	* include/functions_snmp_browser.php: Improved the
	Windows compatibility of some commands.

2014-05-28  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed field that
	wasn't saved on DB in WMI modules for ticket #794

2014-05-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/files_repo.php: Fixed a weird error when
	uploading big files.

	* godmode/setup/setup_general.php,
	include/functions_config.php: Now is possible to set
	a custom path to the pandora server logs.

	* extensions/pandora_logs.php,
	extensions/system_info.php: Now the custom server log path
	is used if exists.

	* include/functions.php: Now the function "get_file_upload_status"
	returns -1 when the $_FILES array is empty.

	* include/config_process.php: Fixed an error that could
	avoid the log in pandora_console.log.

2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/graph_builder.main.php,
	include/functions_graph.php, include/functions_visual_map.php,
	include/functions_custom_graphs.php, include/constants.php,
	operation/reporting/graph_viewer.php: killing unicorns and magic
	numbers for the kind of custom graphs.

2014-05-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_wizard.snmp_explorer.php: Fix wrong
	parameters like unit setted in SNMP Wizard for ticket #796

2014-05-27  Miguel de Dios <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	godmode/reporting/visual_console_builder.editor.js,
	include/functions_custom_graphs.php,
	include/ajax/visual_console_builder.ajax.php,
	include/functions_graph.php, include/functions_visual_map.php,